--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,19 @@
-.App {
-  text-align: center;
-}
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/**
+__Font family poppin
+*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/**
+Root CSS
+*/
+@import url("./Styles/root.css");
+/**
+All CSS import
+*/
+@import url("./Styles/common.css");
+@import url("./Shared/Components/Buttons/Buttons.css");
+/**
+__ CSS for all
+*/
+* {
+  font-family: "Poppins", sans-serif !important;
 }
