review(not done)

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ All CSS import
 @import url("./Styles/common.css");
 @import url("./Shared/Components/Buttons/Buttons.css");
 @import url("./Styles/BSOberlap.css");
+/* @import url("./Pages/Home/Components/swipper.css"); */
 /**
 __ CSS for all
 */
